--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
 	"name": "gatsby-source-notion-db",
 	"description": "Gatsby Source plugin for Notion databases and pages.",
-	"version": "0.2.0",
+	"version": "0.3.0",
 	"main": "index.js",
 	"license": "MIT",
 	"private": false,
 	"author": "dkvist <daniel@dkvist.com>",
 	"keywords": [
 		"notion",
+		"notion sdk",
 		"gatsby",
 		"gatsby-plugin"
 	],
-	"devDependencies": {
-		"dotenv": "^9.0.2"
-	},
+	"devDependencies": {},
 	"dependencies": {
 		"@notionhq/client": "^0.1.3"
 	},
